--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - main
   #PR触发
-  pull_request:
-    branches:
-      - main
+  #pull_request:
+  #  branches:
+  #    - main
   # schedule:
     # 每天6:30和18:30触发
     # - cron:  '30 6,18 * * *'
