--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,10 +11,17 @@ theme:
     - navigation.top
     - search.suggest
     - search.highlight
-  palette:
-    scheme: default
-    primary: deep purple
-    accent: deep purple
+  palette: 
+      primary: deep purple
+      accent: deep purple
+    - scheme: default
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to dark mode
+    - scheme: slate 
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode    
   font:
     text: 'Quicksand'
 markdown_extensions:
@@ -27,11 +34,6 @@ plugins:
 copyright: Copyright &copy; 2018 - 2022 Project Raki
 extra:
   generator: false
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/Shall-We-Dance/ProjectRaki
-    - icon: fontawesome/solid/paper-plane
-      link: mailto:<wm@greysea.cc>
       
 repo_url: https://github.com/Shall-We-Dance/ProjectRaki
 repo_name: Project Raki @Github
