--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ theme:
     - media: "(prefers-color-scheme: dark)"
       scheme: slate 
       primary: deep purple
-      accent: deep purple
+      accent: cyan
       toggle:
         icon: material/weather-night
         name: Switch to light mode    
