--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,14 +18,14 @@ theme:
       accent: deep purple
       toggle:
         icon: material/weather-sunny
-        name: Switch to dark mode
+        name: 夜间模式
     - media: "(prefers-color-scheme: dark)"
       scheme: slate 
       primary: deep purple
       accent: cyan
       toggle:
         icon: material/weather-night
-        name: Switch to light mode    
+        name: 日间模式  
   font:
     text: 'Quicksand'
 markdown_extensions:
