--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,3 +41,4 @@ extra:
       
 repo_url: https://github.com/Shall-We-Dance/ProjectRaki
 repo_name: Project Raki @Github
+edit_uri: edit/main/docs/
